--- a/Income_and_Living_Prices__Data_Madness.ipynb
+++ b/Income_and_Living_Prices__Data_Madness.ipynb
@@ -20586,6 +20586,93 @@
     "+ `Gender`\n",
     "+ (`Age`)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2 : Retrieving Data from Numbeo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Numbeo.com API exploration kit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This section allows for easy exploration of the Numbeo.com API using view, store and load-to-memory functions.\n",
+    "\n",
+    "All calls can be found under the [Numbeo.com API documentation][1] along with their respective descriptions.\n",
+    "    \n",
+    "Our API key is valid until 27/03/2021.\n",
+    "\n",
+    "[1]: https://www.numbeo.com/api/doc.jsp \"Numbeo.com API Documentation\"\n",
+    "\n",
+    "__IMPORTANT:__ Please run the below command in your terminal to allow ipynb to use large data streams.\n",
+    "\n",
+    "`jupyter notebook --NotebookApp.iopub_data_rate_limit=1.0e10`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 546,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urllib, json\n",
+    "\n",
+    "prefix = \"https://www.numbeo.com/api/\"\n",
+    "key = \"?api_key=5xu0b257se2ui6\"\n",
+    "\n",
+    "\n",
+    "def print_api_response() :\n",
+    "    method = input('You are about to VIEW data in JSON format.\\nEnter your API method:\\n')\n",
+    "    url = prefix + method + key\n",
+    "    response = urllib.request.urlopen(url)\n",
+    "    data = json.loads(response.read())\n",
+    "    indented_data = json.dumps(data, indent=4)\n",
+    "    print(indented_data)  \n",
+    "\n",
+    "    \n",
+    "def store_api_response() :\n",
+    "    method = input('You are about to STORE data in JSON format.\\nEnter your API method:\\n')\n",
+    "    filename = input('Please enter a filename to store the JSON data under:\\n')\n",
+    "    url = prefix + method + key\n",
+    "    response = urllib.request.urlopen(url)\n",
+    "    data = json.loads(response.read())\n",
+    "    indented_data = json.dumps(data, indent=4)\n",
+    "    with open(filename + \".json\", \"w\") as write_file: \n",
+    "        json.dump(data, write_file, indent=4)\n",
+    "    print('\\nWrite completed. Check your workingdir.')\n",
+    "\n",
+    "    \n",
+    "def open_stored_response() : \n",
+    "    filename = input('Please enter a filename to open:\\n')\n",
+    "    with open(filename + '.json') as f:   \n",
+    "        data = json.load(f)\n",
+    "        return json.dumps(data, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. __print_api_response()__ to view the incoming server response in indented JSON format.\n",
+    "2. __store_api_response()__ to write the incoming server response to a custom filename.json within your workingdir.\n",
+    "3. __variable_name = open_stored_response()__ to open a saved filename.json and store the data to 'variable_name'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
