--- a/Income_and_Living_Prices__Data_Madness.ipynb
+++ b/Income_and_Living_Prices__Data_Madness.ipynb
@@ -12919,29 +12919,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "after filtering we lost Survey Year            4517\n",
-      "SalaryUSD              4517\n",
-      "Country                4517\n",
-      "JobTitle               4517\n",
-      "Tenure                 4094\n",
-      "Education              4517\n",
-      "Gender                 4517\n",
-      "Age                    4459\n",
-      "DataSet                4517\n",
-      "countryMedianSalary    4517\n",
-      "dtype: int64 rows\n"
+      "after filtering we lost 4517 rows\n"
      ]
     }
    ],
    "source": [
-    "print(f\"after filtering we lost {df_income.count() - df_income_filtered.count()} rows\")"
+    "print(f\"after filtering we lost {df_income['SalaryUSD'].count() - df_income_filtered['SalaryUSD'].count()} rows\")"
    ]
   },
   {
