--- a/Income_and_Living_Prices__Data_Madness.ipynb
+++ b/Income_and_Living_Prices__Data_Madness.ipynb
@@ -13229,278 +13229,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 248,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Survey Year</th>\n",
-       "      <th>SalaryUSD</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>JobTitle</th>\n",
-       "      <th>Tenure</th>\n",
-       "      <th>Education</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>DataSet</th>\n",
-       "      <th>countryMedianSalary</th>\n",
-       "      <th>countryResponseCount</th>\n",
-       "      <th>taxWedge</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>250000.0</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Operations Research Practitioner</td>\n",
-       "      <td>More than 10 years</td>\n",
-       "      <td>Master's degree</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>103000.0</td>\n",
-       "      <td>5671</td>\n",
-       "      <td>34.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>64185.0</td>\n",
-       "      <td>Australia</td>\n",
-       "      <td>Business Analyst</td>\n",
-       "      <td>3 to 5 years</td>\n",
-       "      <td>Bachelor's degree</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>85000.0</td>\n",
-       "      <td>671</td>\n",
-       "      <td>34.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>100000.0</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>Scientist/Researcher</td>\n",
-       "      <td>Less than a year</td>\n",
-       "      <td>Doctoral degree</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>103000.0</td>\n",
-       "      <td>5671</td>\n",
-       "      <td>34.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>53352.0</td>\n",
-       "      <td>Colombia</td>\n",
-       "      <td>Data Scientist</td>\n",
-       "      <td>3 to 5 years</td>\n",
-       "      <td>Master's degree</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>15000.0</td>\n",
-       "      <td>225</td>\n",
-       "      <td>30.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>179374.0</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>Data Scientist</td>\n",
-       "      <td>More than 10 years</td>\n",
-       "      <td>I did not complete any formal education past h...</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>65000.0</td>\n",
-       "      <td>956</td>\n",
-       "      <td>51.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34233</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>32000.0</td>\n",
-       "      <td>Hungary</td>\n",
-       "      <td>DBA (General - splits time evenly between writ...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Bachelors (4 years)</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>22500.0</td>\n",
-       "      <td>119</td>\n",
-       "      <td>44.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34234</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>32000.0</td>\n",
-       "      <td>Hungary</td>\n",
-       "      <td>DBA (General - splits time evenly between writ...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Bachelors (4 years)</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>22500.0</td>\n",
-       "      <td>119</td>\n",
-       "      <td>44.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34235</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>40000.0</td>\n",
-       "      <td>Portugal</td>\n",
-       "      <td>Developer: App code (C#, JS, etc)</td>\n",
-       "      <td>19</td>\n",
-       "      <td>Bachelors (4 years)</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>22500.0</td>\n",
-       "      <td>193</td>\n",
-       "      <td>46.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34236</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>130000.0</td>\n",
-       "      <td>United States</td>\n",
-       "      <td>DBA (General - splits time evenly between writ...</td>\n",
-       "      <td>17</td>\n",
-       "      <td>Bachelors (4 years)</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>103000.0</td>\n",
-       "      <td>5671</td>\n",
-       "      <td>34.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34237</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>84500.0</td>\n",
-       "      <td>Canada</td>\n",
-       "      <td>Architect</td>\n",
-       "      <td>19</td>\n",
-       "      <td>Bachelors (4 years)</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>65000.0</td>\n",
-       "      <td>995</td>\n",
-       "      <td>31.8</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>29161 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Survey Year  SalaryUSD        Country  \\\n",
-       "0             2017   250000.0  United States   \n",
-       "1             2017    64185.0      Australia   \n",
-       "4             2017   100000.0  United States   \n",
-       "6             2017    53352.0       Colombia   \n",
-       "7             2017   179374.0        Germany   \n",
-       "...            ...        ...            ...   \n",
-       "34233         2019    32000.0        Hungary   \n",
-       "34234         2019    32000.0        Hungary   \n",
-       "34235         2019    40000.0       Portugal   \n",
-       "34236         2019   130000.0  United States   \n",
-       "34237         2019    84500.0         Canada   \n",
-       "\n",
-       "                                                JobTitle              Tenure  \\\n",
-       "0                       Operations Research Practitioner  More than 10 years   \n",
-       "1                                       Business Analyst        3 to 5 years   \n",
-       "4                                   Scientist/Researcher    Less than a year   \n",
-       "6                                         Data Scientist        3 to 5 years   \n",
-       "7                                         Data Scientist  More than 10 years   \n",
-       "...                                                  ...                 ...   \n",
-       "34233  DBA (General - splits time evenly between writ...                   3   \n",
-       "34234  DBA (General - splits time evenly between writ...                   3   \n",
-       "34235                  Developer: App code (C#, JS, etc)                  19   \n",
-       "34236  DBA (General - splits time evenly between writ...                  17   \n",
-       "34237                                          Architect                  19   \n",
-       "\n",
-       "                                               Education  Gender   Age  \\\n",
-       "0                                        Master's degree    Male  56.0   \n",
-       "1                                      Bachelor's degree  Female  43.0   \n",
-       "4                                        Doctoral degree    Male  33.0   \n",
-       "6                                        Master's degree    Male  34.0   \n",
-       "7      I did not complete any formal education past h...    Male  41.0   \n",
-       "...                                                  ...     ...   ...   \n",
-       "34233                                Bachelors (4 years)    Male   NaN   \n",
-       "34234                                Bachelors (4 years)    Male   NaN   \n",
-       "34235                                Bachelors (4 years)    Male   NaN   \n",
-       "34236                                Bachelors (4 years)  Female   NaN   \n",
-       "34237                                Bachelors (4 years)    Male   NaN   \n",
-       "\n",
-       "       DataSet  countryMedianSalary  countryResponseCount  taxWedge  \n",
-       "0            0             103000.0                  5671      34.1  \n",
-       "1            0              85000.0                   671      34.4  \n",
-       "4            0             103000.0                  5671      34.1  \n",
-       "6            0              15000.0                   225      30.2  \n",
-       "7            0              65000.0                   956      51.0  \n",
-       "...        ...                  ...                   ...       ...  \n",
-       "34233        1              22500.0                   119      44.6  \n",
-       "34234        1              22500.0                   119      44.6  \n",
-       "34235        1              22500.0                   193      46.6  \n",
-       "34236        1             103000.0                  5671      34.1  \n",
-       "34237        1              65000.0                   995      31.8  \n",
-       "\n",
-       "[29161 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 238,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_income_filtered.dropna(subset=['taxWedge'])"
+    "df_income_filtered=df_income_filtered.dropna(subset=['taxWedge'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ These are the countries we have left"
    ]
   },
   {
@@ -13533,6 +13273,152 @@
     "flierprops = dict(marker='o', markerfacecolor='steelblue', markersize=2,\n",
     "                  linestyle='none')\n",
     "df_income_filtered.boxplot(column=[\"SalaryUSD\"], by=[\"Country\"], rot=90, figsize=(20,10), flierprops=flierprops, showfliers=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SalaryAfterTaxUSD</th>\n",
+       "      <th>SalaryUSD</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Switzerland</th>\n",
+       "      <td>82237.500</td>\n",
+       "      <td>112500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>United States</th>\n",
+       "      <td>69854.000</td>\n",
+       "      <td>106000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Israel</th>\n",
+       "      <td>64030.000</td>\n",
+       "      <td>95000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Australia</th>\n",
+       "      <td>56143.760</td>\n",
+       "      <td>85585.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>New Zealand</th>\n",
+       "      <td>54504.000</td>\n",
+       "      <td>72000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Denmark</th>\n",
+       "      <td>50568.000</td>\n",
+       "      <td>86000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Norway</th>\n",
+       "      <td>49640.000</td>\n",
+       "      <td>85000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Canada</th>\n",
+       "      <td>47748.866</td>\n",
+       "      <td>70013.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ireland</th>\n",
+       "      <td>43650.000</td>\n",
+       "      <td>75000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>South Korea</th>\n",
+       "      <td>40235.520</td>\n",
+       "      <td>54080.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Japan</th>\n",
+       "      <td>38422.098</td>\n",
+       "      <td>59202.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Netherlands</th>\n",
+       "      <td>37570.000</td>\n",
+       "      <td>65000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>United Kingdom</th>\n",
+       "      <td>37421.264</td>\n",
+       "      <td>59588.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>South Africa</th>\n",
+       "      <td>33495.725</td>\n",
+       "      <td>46201.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chile</th>\n",
+       "      <td>32095.000</td>\n",
+       "      <td>35000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                SalaryAfterTaxUSD  SalaryUSD\n",
+       "Country                                     \n",
+       "Switzerland             82237.500   112500.0\n",
+       "United States           69854.000   106000.0\n",
+       "Israel                  64030.000    95000.0\n",
+       "Australia               56143.760    85585.0\n",
+       "New Zealand             54504.000    72000.0\n",
+       "Denmark                 50568.000    86000.0\n",
+       "Norway                  49640.000    85000.0\n",
+       "Canada                  47748.866    70013.0\n",
+       "Ireland                 43650.000    75000.0\n",
+       "South Korea             40235.520    54080.0\n",
+       "Japan                   38422.098    59202.0\n",
+       "Netherlands             37570.000    65000.0\n",
+       "United Kingdom          37421.264    59588.0\n",
+       "South Africa            33495.725    46201.0\n",
+       "Chile                   32095.000    35000.0"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_income_filtered['SalaryAfterTaxUSD'] = df_income_filtered[\"SalaryUSD\"] - df_income_filtered[\"SalaryUSD\"]*(df_income_filtered['taxWedge']/100)\n",
+    "df_income_after_tax = df_income_filtered\n",
+    "df_income_after_tax.groupby('Country')['SalaryAfterTaxUSD','SalaryUSD'].median().sort_values(ascending=False, by= 'SalaryAfterTaxUSD')[:15]"
    ]
   },
   {
