--- a/Income_and_Living_Prices__Data_Madness.ipynb
+++ b/Income_and_Living_Prices__Data_Madness.ipynb
@@ -13001,6 +13001,11 @@
    "source": [
     "df_income_filtered.loc[(df_income_filtered.Country == 'United Kingdom of Great Britain and Northern Ireland'),'Country']='United Kingdom'\n",
     "df_income_filtered.loc[(df_income_filtered.Country == 'United States of America'),'Country']='United States'\n",
+    "df_income_filtered.loc[(df_income_filtered.Country == 'Viet Nam'),'Country']='Vietnam'\n",
+    "df_income_filtered.loc[(df_income_filtered.Country == 'Republic of Korea'),'Country']='South Korea'\n",
+    "df_income_filtered.loc[(df_income_filtered.Country == \"People 's Republic of China\"),'Country']='China'\n",
+    "df_income_filtered.loc[(df_income_filtered.Country == 'Iran, Islamic Republic of...'),'Country']='Iran'\n",
+    "\n",
     "print(df_income_filtered['Country'].unique())"
    ]
   },
@@ -13457,6 +13462,157 @@
     "__IMPORTANT:__ Please run the below command in your terminal to allow ipynb to use large data streams. Note that this will break some functionality regarding the reading in of xslx files, and therefore should only be used when you want to store the data from the API. In the case the files already are in your workingdir, this step won't be necessary and the associated code communicating with the API can be skipped.\n",
     "\n",
     "`jupyter notebook --NotebookApp.iopub_data_rate_limit=1.0e10`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The following methods allow for manual viewing and storing of the numbeo API data\n",
+    "import urllib, json\n",
+    "from pandas.io.json import json_normalize\n",
+    "\n",
+    "prefix = \"https://www.numbeo.com/api/\"\n",
+    "key = \"?api_key=5xu0b257se2ui6\"\n",
+    "\n",
+    "def mprint_api_response() :\n",
+    "    method = input('You are about to VIEW data in JSON format.\\nEnter your API method:\\n')\n",
+    "    parameters = '&' + input('Enter method paramaters if applicable:\\n')\n",
+    "    if len(parameters) > 0:\n",
+    "        url = prefix + method + key + parameters\n",
+    "    else : \n",
+    "        url = prefix + method + key\n",
+    "    response = urllib.request.urlopen(url)\n",
+    "    data = json.loads(response.read())\n",
+    "    indented_data = json.dumps(data, indent=4)\n",
+    "    print(indented_data)   \n",
+    "    \n",
+    "    \n",
+    "def mstore_api_response() :\n",
+    "    method = input('You are about to STORE data in JSON format.\\nEnter your API method:\\n')\n",
+    "    parameters = '&' + input('Enter method paramaters if applicable:\\n')\n",
+    "    filename = input('Please enter a filename to store the JSON data under:\\n')\n",
+    "    if len(parameters) > 0:\n",
+    "        url = prefix + method + key + parameters\n",
+    "    else : \n",
+    "        url = prefix + method + key\n",
+    "    response = urllib.request.urlopen(url)\n",
+    "    data = json.loads(response.read())\n",
+    "    indented_data = json.dumps(data, indent=4)\n",
+    "    with open(filename + \".json\", \"w\") as write_file: \n",
+    "        json.dump(data, write_file, indent=4)\n",
+    "    print('\\nWrite completed. Check your workingdir.')\n",
+    "\n",
+    "    \n",
+    "def mopen_stored_response() : \n",
+    "    filename = input('Please enter a filename to open:\\n')\n",
+    "    with open(filename + '.json') as f:   \n",
+    "        data = json.load(f)\n",
+    "    return json.dumps(data, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. __mprint_api_response()__ to view the incoming server response in indented JSON format.\n",
+    "2. __mstore_api_response()__ to write the incoming server response to a custom filename.json within your workingdir.\n",
+    "3. __variable_name = mopen_stored_response()__ to open a saved filename.json and store the data to 'variable_name'."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# The following methods allow for viewing and storing multiple API calls through the usage of lists\n",
+    "\n",
+    "prefix = \"https://www.numbeo.com/api/\"\n",
+    "key = \"?api_key=5xu0b257se2ui6\"\n",
+    "\n",
+    "\n",
+    "def print_api_response(method_queue, parameter, countries) :\n",
+    "    for method in method_queue :\n",
+    "        for country in countries :\n",
+    "            if len(parameter) > 0 :\n",
+    "                url = prefix + method + key + '&' + parameter + country\n",
+    "            else : \n",
+    "                url = prefix + method + key \n",
+    "            response = urllib.request.urlopen(url)\n",
+    "            data = json.loads(response.read())\n",
+    "            indented_data = json.dumps(data, indent=4)\n",
+    "            print(indented_data)    \n",
+    "    \n",
+    "    \n",
+    "def store_api_response(method_queue, parameter, countries) :\n",
+    "    for method in method_queue :\n",
+    "        for country in countries :\n",
+    "            if len(parameter) > 0 :\n",
+    "                url = prefix + method + key + '&' + parameter + country\n",
+    "            else : \n",
+    "                url = prefix + method + key \n",
+    "            filename = method + '_' + country\n",
+    "            response = urllib.request.urlopen(url)\n",
+    "            data = json.loads(response.read())\n",
+    "            indented_data = json.dumps(data, indent=4)\n",
+    "            with open(filename + \".json\", \"w\") as write_file : \n",
+    "                json.dump(data, write_file, indent=4)\n",
+    "            print('\\nWrite completed to ' + filename + '.json.')\n",
+    "\n",
+    "            \n",
+    "def load_to_dataframe() : \n",
+    "    filename = input('Please enter a filename to open:\\n')\n",
+    "    with open(filename + '.json') as f:   \n",
+    "        data = json.load(f)\n",
+    "    return json_normalize(data['prices'])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A note on average prices\n",
+    " Numbeo provides a broad selection of data points regarding the average prices for select items in countries. We use a handful of data points to serve as an estimator for our cost of living. The most important value being the average price of monthly rent for a single bedroom apartment both inside and outside of the city centre."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have the data on our median salaries per country in USD, we would now like to dig deeper and see where we can get the most out of our money earned. The average median paying country might not be the best place to live in due to the costs of living associated with said country. We will therefore make use of the Numbeo.com API to fetch data regarding the average rent prices and utilities, along with the Consumer Price Index (CPI). We will use this data to determine where we can get the most for our money earned.\n",
+    "\n",
+    "Let us start by preparing our list of countries to request data on. By requesting all cities with available data from Numbeo, we can also get the names of all the countries that contain these cities. Comparing our list of median salary per country allows us to create a list of countries we should request data on. Thankfully, all countries are supported by the API. After API calling some simple methods on country data, we have assembled our list of countries in a format that will be accepted by the Numbeo API."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['Argentina', 'Australia', 'Austria', 'Belgium', 'Brazil', 'Canada',\n",
+      "       'Chile', 'China', 'Colombia', 'Czech Republic', 'Denmark', 'Finland',\n",
+      "       'France', 'Germany', 'Greece', 'Hungary', 'India', 'Indonesia',\n",
+      "       'Ireland', 'Israel', 'Italy', 'Japan', 'Mexico', 'Netherlands',\n",
+      "       'New Zealand', 'Norway', 'Poland', 'Portugal', 'South Africa',\n",
+      "       'South Korea', 'Spain', 'Sweden', 'Switzerland', 'Turkey',\n",
+      "       'United Kingdom', 'United States'],\n",
+      "      dtype='object', name='Country')\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_med_sal_taxed = df_income_after_tax.groupby('Country')['SalaryAfterTaxUSD','SalaryUSD'].median().sort_values(by= 'Country')\n",
+    "print(df_med_sal_taxed.index)"
    ]
   },
   {
