--- a/Income_and_Living_Prices__Data_Madness.ipynb
+++ b/Income_and_Living_Prices__Data_Madness.ipynb
@@ -15642,7 +15642,7 @@
    "cell_type": "code",
    "execution_count": 172,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -15845,7 +15845,9 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -15887,7 +15889,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our top three countries are an interesting result considering their geographically varying locations. In the United States we seem to have the most purchasing power after tax and fixed expenses adjusted for DPI. This does however not take into account the costs associated with healthcare in the United States. South Africa and Israel both have [universal health care][1] while the US does not, which could possibly explain the gap in CPI adjusted purchasing power compared to the United States, as their universal health care is facilitated through taxation.\n",
+    "Our top three countries are an interesting result considering their geographically varying locations. In the United States we seem to have the most purchasing power after tax and fixed expenses adjusted for DPI. This does however not take into account the costs associated with healthcare in the United States. South Africa and Israel both have [universal health care][1] while the US does not, which could possibly explain the gap in CPI adjusted purchasing power compared to the United States.\n",
     "\n",
     "\n",
     "[1]: https://en.wikipedia.org/wiki/List_of_countries_with_universal_health_care#:~:text=Countries%20with%20universal%20healthcare%20include,Ukraine%2C%20and%20the%20United%20Kingdom. \"List of countries with universal health car\""
