added ethical considerations and link

--- a/Income_and_Living_Prices__Data_Madness.ipynb
+++ b/Income_and_Living_Prices__Data_Madness.ipynb
@@ -41,6 +41,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Ethical considerations\n",
+    "#### Source and Legality\n",
+    "For the benefit of this analysis, salary data was partly obtained from Kaggle surveys and additionally from a blog from a data professional. Both sources stated explicit consent. All survey answers are from users, so ultimately can’t be verified. There is a possibility of bias stemming from the characteristics of respondents. The combination of multiple datasets is an attempt to mitigate this. Despite some bias risk, we believe the data is representative of our audience and data science population as a whole.\n",
+    "Besides salary data, tax rates sourced from the OECD. The tax rates are as public as knowledge gets and there should be no issues with reliability. \n",
+    "The chads from Numbeo.com were so kind as to bestow us API access to their cost of living and quality of life data. The data points are all sourced from users and are subject to the scrutiny of the platform that operates the website since 2009. A large amount of contributions and a relative lack of incentive for users to fabricate things makes Numbeo a great data source.\n",
+    "\n",
+    "#### Considerations and decisions\n",
+    "Governments in many countries usually redistribute part of taxes they collect, the OECD data should take these redistributions into account, as the tax wedge is based on an income profile. Some taxes will be redistributed as benefits in kind such as healthcare, which is something that’s difficult to quantify.\n",
+    "For many countries, no taxation data was available from aggregating parties such as the OECD. Luckily, these countries overlapped with those that had few responses anyway, so we wouldn’t be able to include them based on a lack of salary data\n",
+    "The comparison of male and female compensation by country might be susceptible to misinterpretation as we don’t correct for confounding variables. Additionally, fewer women than men responded to all of the surveys, so for smaller countries, the hypothesis testing will be based on less female data points\n",
+    "\n",
+    "#### Stakeholders\n",
+    "The group potentially most interested in this project would consist of (soon to be) data professionals with an adventurous mindset and a penchant for long term travel or migration. To a large extent, any relatively mobile individual can be interested in this project. \n",
+    "Limitations about Analysis and Conclusions\n",
+    "A notable limitation is the absence of many smaller countries such as the Emirates that may be excellent places but had too few responses. Also, there is no guarantee that an immigrant will have the same success as a native. Workforces in higher-paying countries might be better compensated for other reasons than the local economy. These confounders are hard to pinpoint.\n",
+    "It might be tempting for users of the analysis to view it as a definitive guide to living. This analyses only paints a static picture of a hopefully broadly applicable case. The direction someone feels that a country is going in maybe more relevant than anything else if someone is set to build a future.\n",
+    "With education level, it is not guaranteed that higher education causes better compensation or other outcomes. Indeed it might be the case that people choosing to continue education had other qualities that they bring to fruïtion regardless or despite their pursuit of a degree.\n",
+    "\n",
+    "#### Beneficiaries and Cautions\n",
+    "As eluded to in the stakeholder section. The likely beneficiaries are mainly (data)  professionals that want a quick overview of what to roughly expect when working in a country and do more thorough research on countries of interest.\n",
+    "Although the tax wedge might be a good indicator of the economic freedom of a country, a potential entrepreneur might want to consider many other factors such as strong enforcement of property rights and low bureaucracy. They might benefit from looking for a country with lower wages to incorporate.\n",
+    "Being mindful of the limited influence, our work may have In the grand scheme of things, spreading awareness of opportunities could inspire individuals to go where they treated best and find a better life for their loved ones. Mass adoption of these ideas might stimulate critical thinking about the ethics of taxation in general. When Individuals flex their ability to go overseas, nationstates can no longer afford to waste resources and will have to compete for the grace of their subjects rather than exploit them. In that way, everyone on will benefit on average.\n",
+    "Smaller countries that have too few survey respondents may be excluded in this analyses  as we wanted at least twenty responses for a countries reesults to be somewhat reliable. \n",
+    "Overall, there is no shocking revelation, privacy or other concern of causing harm.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## EDA\n",
     "### Import the data from our two main sources for salary and personal data:\n",
     "+ [2017](https://www.kaggle.com/kaggle/kaggle-survey-2017), [2018](https://www.kaggle.com/kaggle/kaggle-survey-2018) and [2019](https://www.kaggle.com/c/kaggle-survey-2019/data) Kaggle Machine Learning & Data Science Survey **(1)**\n",
@@ -13180,7 +13210,10 @@
     "For OECD countries, the most recent numbers are from 2019.\n",
     "For other countries, they are from 2010-2013 as there was only a dated document available.\n",
     "+ http://compareyourcountry.org/taxing-wages/en/0/715/default/2019\n",
-    "+ https://read.oecd-ilibrary.org/taxation/taxi"
+    "+ https://read.oecd-ilibrary.org/taxation/taxi\n",
+    "\n",
+    "another nice document outlining tax wedge data. Note that i doesn't have all income categories:\n",
+    "+ https://www.oecd.org/tax/tax-policy/taxing-wages-brochure.pdf\n"
    ]
   },
   {
@@ -14360,9 +14393,7 @@
   {
    "cell_type": "code",
    "execution_count": 385,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -17057,7 +17088,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
