--- a/Income_and_Living_Prices__Data_Madness.ipynb
+++ b/Income_and_Living_Prices__Data_Madness.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "#### Considerations and decisions\n",
     "Governments in many countries usually redistribute part of taxes they collect, the OECD data should take these redistributions into account, as the tax wedge is based on an income profile. Some taxes will be redistributed as benefits in kind such as healthcare, which is something that’s difficult to quantify.\n",
-    "For many countries, no taxation data was available from aggregating parties such as the OECD. Luckily, these countries overlapped with those that had few responses anyway, so we wouldn’t be able to include them based on a lack of salary data\n",
+    "For many countries, no taxation data was available from aggregating parties such as the OECD. Luckily, these countries overlapped with those that had few responses anyway, so we wouldn’t be able to include them based on a lack of salary data alone.\n",
     "The comparison of male and female compensation by country might be susceptible to misinterpretation as we don’t correct for confounding variables. Additionally, fewer women than men responded to all of the surveys, so for smaller countries, the hypothesis testing will be based on less female data points\n",
     "\n",
     "#### Stakeholders\n",
